<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/bkwelcom"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/appbarlayout_login">
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toolbar_login"
                app:titleTextColor="@color/white"
                app:navigationIcon="@drawable/ic_baseline_keyboard_backspace_24"
                android:background="@color/toolbar"/>
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginHorizontal="10dp"
            android:elevation="10dp"
            android:layout_below="@id/appbarlayout_login"
            >

            <LinearLayout
                android:layout_width="389dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/dang_ki"
                    android:textColor="@color/toolbar"
                    android:textSize="35sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_email_dangky"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/item_boder_bgwhite"
                    android:hint="@string/email"
                    android:textColorHint="@color/black"
                    android:textSize="15sp"
                    android:paddingTop="10dp"
                    android:paddingLeft="20dp"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_tenDN_dangky"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/item_boder_bgwhite"
                    android:hint="@string/tenDN"
                    android:textColorHint="@color/black"
                    android:textSize="15sp"
                    android:paddingTop="10dp"
                    android:inputType="textPersonName"
                    android:paddingLeft="20dp"
                    android:textColor="@color/black" />


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_pass_dangky"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/item_boder_bgwhite"
                    android:hint="@string/pass"
                    android:textColorHint="@color/black"
                    android:textSize="15sp"
                    android:paddingTop="10dp"
                    android:inputType="textPassword"
                    android:paddingLeft="20dp"
                    android:textColor="@color/black" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_nhaclaiMK"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/item_boder_bgwhite"
                    android:hint="@string/nhaclaiMK"
                    android:textColorHint="@color/black"
                    android:textSize="15sp"
                    android:paddingTop="10dp"
                    android:inputType="textPassword"
                    android:paddingLeft="20dp"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="40dp"
                    android:gravity="right"
                    android:orientation="horizontal"></LinearLayout>

                <Button
                    android:id="@+id/btn_dangky"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/border_login"
                    android:padding="5dp"
                    android:text="@string/dang_ki"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</layout>